After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669832 - [PATCH] Fix a possible memory leak in save_dialog_response_cb()
[PATCH] Fix a possible memory leak in save_dialog_response_cb()
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-10 19:53 UTC by Daniel Trebbien
Modified: 2012-02-10 20:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (1019 bytes, patch)
2012-02-10 19:55 UTC, Daniel Trebbien
none Details | Review

Description Daniel Trebbien 2012-02-10 19:53:55 UTC
`info` might not be unrefed.
Comment 1 Daniel Trebbien 2012-02-10 19:55:36 UTC
Created attachment 207290 [details] [review]
Fix
Comment 2 Paolo Borelli 2012-02-10 20:24:28 UTC
This time the patch is not 100% correct: if we hit the first "goto" codepath we will unref an uninitialized var.

Anyway I amended the patch and pushed it. Thanks for spotting this!