Fix possible memory leak

Unref 'file' also in the error code path.

https://bugzilla.gnome.org/show_bug.cgi?id=669832